2641 [AudioEncoder]         fixed handling of MediaInfo information for HD audio tracks
2640 [AviSynth]             improved debug handling
2639 [Main]                 removed aspect ratio controls from the video preview control. Bug #843
2638 [Profile]              added support to import old export files (regression of 2635). Bug #849
2637 [VobSubber]            each track will be demuxed into a dedicated file set to avoid missing tracks when muxing. Bug #845
     [VobSubber]+[OneClick] for multiple tracks the source will only be indexed once
2636 [Audio Encoder]        cosmetic change. Bug #826
2635 [Profile]              fixed import & export of profiles (regression of 2590). Bug #842
2634 [L-SMASH Indexer]      added support for MSVC 2015 runtimes
2633                        updated the wiki links to point to https://en.wikibooks.org/wiki/MeGUI
2631 [MediaInfo]            improved DVD audio track language detection
2630 [Audio Encoder]        fixed a crash if a very large audio delay is used
2629 [OneClick]             fixed Blu-Ray playlist processing if a track has no proper language tag (regression of 2572)
2628 [x264]                 added 16:15 to the --sar values
2627 [Main]                 detects during startup if AviSynth can be used
                            automatic fallback to the portable AviSynth
2626 [AvisynthWrapper]      updated to recent avisynth.h (requires AviSynth 2.6)
                            improved error handling
                            added x64 support
2625 [Flac Encoder]         fixed always using compression level 0 (regression of 2536)


Changelog 2525 --> 2624

Features/Changes:
[Aften Encoder]        The Aften AC-3 encoder has been removed. Please switch to FFmpeg AC-3.
[DGAVCIndex Indexer]   DGAVCIndexer has been removed. Please use another indexer.
[DGIndexIM Indexer]    DGIndexIM has been added. It is disabled by default and has to be enabled in the settings. 